# digital-circuit-simulator

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OnefileUltraUltra.spec  README.md  SECURITY.md  app.py  build.py  main.py  nuitka_build.py  pyproject.toml  requirements.txt  simulator.py
.devcontainer/: devcontainer.json  setup.sh
.github/: release_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  release.yml  tests.yml
assets/: help_text.py  icon.icns
core/: __init__.py  advanced.py  annotations.py  base.py  io.py  logic_gates.py
docs/: BENCHMARKS.md  BUILD_INSTRUCTIONS.md  CD_CASE_STUDY.md  DISTRIBUTION_FAQ.md  EXE_DISTRIBUTION_FAQ.md
examples/: memory.yaml  ring-oscillator-clock.yaml
save_files/: settings.yaml
save_files/circuits/: hello.yaml  loadtest.yaml  test.yaml
scripts/: prune.py
simulator/: __init__.py  main.py  persistence.py  setup.py  truthtable.py  utils.py
tests/: conftest.py  test_advanced.py  test_history.py  test_logic.py  test_persistence.py  test_simulation.py  test_stress.py  test_truthtable.py  test_ui_models.py  test_utils.py
ui/: canvas.py  components.py  items.py  theme.py
ui/components/: __init__.py  componentlibrary.py  confirmdialog.py  filelistdialog.py  globalsettingsdialog.py  helpdialog.py  inputdialog.py  propertypanel.py  settingsdialog.py  truthtabledialog.py  truthtablemodel.py
